--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,48 @@
+# Main dependencies:
+numpy==1.19.1
+pandas==1.1.5
+scipy==1.5.3
+scikit-learn==0.23.2
+matplotlib==3.3.2
+biopython==1.78
+# dependencies:
+WeasyPrint==51
+networkx==2.4
+openpyxl==3.0.4
+python-Levenshtein==0.12.1
+sklearn==0.0
+weighted_levenshtein==0.2.1
+xlrd==1.2.0
+xlwt==1.3.0
+# EGF:
+bandwagon
+bandwitch
+blabel
+caravagene
+crecombio
+crazydoc
 dioscuri
-weasyprint==51
+dna_features_viewer
+dnacauldron
+dnachisel
+dnaweaver
+easy_dna
+flametree
+genealloy
+geneblocks
+genedom
+goldenhinges
+icebreaker
+kappagate
+minotaor
 pdf_reports
 plateo
+polymera
+primavera
+proglog
+saboteurs
+sequenticon
+snapgene_reader
+tatapov
+topkappy
+zymp
