--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@main
       - name: "Build egf-notebook:python-3.6 Docker image"
         run: |
-        	docker build .
+        	docker build . \
             --tag ghcr.io/${{ github.repository }}:latest \
             --tag ghcr.io/${{ github.repository }}:v0.1.0
       - name: "Login to GitHub container registry"
