--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,17 @@ jobs:
     steps:
     - name: "Check out repo"
       uses: actions/checkout@v2
-
-    - name: "Build egf-notebook Docker image"
-      run: |
-        docker build . \
-          --tag ghcr.io/edinburgh-genome-foundry/egf_docker_jupyter/egf-notebook:v0.1.0
     - name: "Login to GitHub container registry"
       run: |
         echo ${{ secrets.CR_PAT }} | docker login ghcr.io \
           --username ${{ github.repository_owner }} \
           --password-stdin
+    - name: "Build egf-notebook Docker image"
+      run: |
+        docker build . \
+          --tag ghcr.io/edinburgh-genome-foundry/egf_docker_jupyter/egf-notebook:latest \
+          --tag ghcr.io/edinburgh-genome-foundry/egf_docker_jupyter/egf-notebook:v0.1.1
     - name: "Release Docker image"
       run: |
-        docker push ghcr.io/edinburgh-genome-foundry/egf_docker_jupyter/egf-notebook:v0.1.0
+        docker push ghcr.io/edinburgh-genome-foundry/egf_docker_jupyter/egf-notebook:latest \
+        docker push ghcr.io/edinburgh-genome-foundry/egf_docker_jupyter/egf-notebook:v0.1.1
