--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 # Main dependencies:
-numpy==1.19.1
-pandas==1.1.5
-scipy==1.5.3
-scikit-learn==0.23.2
-matplotlib==3.3.2
-biopython==1.78
+numpy==1.22.3
+pandas==1.4.3
+scipy==1.8.0
+scikit-learn==1.0.2
+matplotlib==3.5.2
+biopython==1.79
 # dependencies:
-WeasyPrint==51
-networkx==2.4
-openpyxl==3.0.4
-python-Levenshtein==0.12.1
+WeasyPrint==52
+networkx==2.8
+openpyxl==3.0.9
+python-Levenshtein==0.12.2
 sklearn==0.0
-weighted_levenshtein==0.2.1
-xlrd==1.2.0
+xlrd==2.0.1
 xlwt==1.3.0
 # EGF:
 bandwagon
 bandwitch
+bioprinter
 blabel
 caravagene
 crecombio
@@ -33,8 +33,9 @@ geneblocks
 genedom
 goldenhinges
 icebreaker
-kappagate
+# kappagate  # see topkappy
 minotaor
+overhang
 pdf_reports
 plateo
 polymera
@@ -44,5 +45,5 @@ saboteurs
 sequenticon
 snapgene_reader
 tatapov
-topkappy
+# topkappy  # see https://github.com/Edinburgh-Genome-Foundry/topkappy/issues/3
 zymp
