Fix login to ghcr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,12 @@ jobs:
     steps:
     - name: "Check out repo"
       uses: actions/checkout@v2
-    - name: "Login to GitHub container registry"
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io \
-          --username ${{ github.repository_owner }} \
-          --password-stdin
+    - name: "Login to GitHub Container Registry"
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: "Build egf-notebook Docker image"
       run: |
         docker build . \
