Fix bumpversion config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,6 @@ tag = True
 
 [bumpversion:file:README.md]
 
-[bumpversion:file:containers/Dockerfile]
+[bumpversion:file:Dockerfile]
 
 [bumpversion:file:.github/workflows/ci.yml]
